- Configure client id and host for our org in sydney region - Node port moved to 8080 - Added masking of PII

--- a/src/example.html
+++ b/src/example.html
@@ -4,8 +4,12 @@
 </head>
 <body>
     <div class="softphone">
-        <iframe id="softphone" allow="camera *; microphone *" src="https://apps.mypurecloud.com/crm/index.html?crm=framework-local-secure"></iframe>
+        <iframe id="softphone" allow="camera *; microphone *" src="https://apps.mypurecloud.com.au/crm/index.html?crm=framework-local-secure"></iframe>
     </div>
+
+    <div class="interaction">
+        <iframe id="interaction" allow="camera *; microphone *; autoplay *; hid *" src="https://apps.mypurecloud.com.au/crm/interaction.html"></iframe>
+    </div>    
 
     <div class='content'>
         <h1>PureCloud Embeddable Framework Example</h1>
